# hybrid-document-search

./: .env.example  .gitignore  Home.py  README.md  _style.py  cleanup_processes.py  fix_database_lock.py  pyproject.toml  start_app.py
.streamlit/: config.toml
Admin/Qdrant/: qdrant_viewer.py
Admin/Quality/: matrix_advanced.py  matrix_only_chunks.py
Application/Common/: DateTimeEncoder.py
Application/Domain/: ChunkedDocuments.py  QdrantModels.py  RawData.py  SearchResults.py  SearchRow.py  TextChunk.py
Application/InternalServices/: LLMService.py
Application/Pipelines/Chunking/: ChunkingPipeline.py
Application/Pipelines/Indexing/: IndexingDocumentPipeline.py  IndexingKeywordsPipeline.py  IndexingQueriesPipeline.py
Application/Pipelines/Load/PDF/: LoadPDFPipeline.py
Application/Pipelines/Preprocessing/: KeywordsPipeline.py  QAPipeline.py  QPipeline.py  SummaryPipeline.py
Application/Process/: 01_load_pdf_nlp.py  02_chunk_json.py  03_metadata_query.py  04_metadata_summary.py  05_metadata_keywords.py  09_index_to_documents.py  10_index_to_documents_keywords.py  11_index_to_documents_queries.py  12_search_examples.py
Application/Services/Chunking/: TextChunkingNLPDocumentService.py
Application/Services/Converters/: Pdf2MarkdownService.py
Application/Services/Docling/: PDFDoclingService.py
Application/Services/Embeddings/: EmbeddingsService.py
Application/Services/Metadata/: KeywordsService.py  QueryAnswearDocumentService.py  QueryAnswerService.py  QueryService.py  SummaryService.py
Application/Services/QualityMonitor/: QualityMonitor.py
Application/Services/Reranker/: RerankerService.py
Application/Services/Search/: AddBonus.py  AdvancedSearchService.py  SearchByKeywords.py  SearchByQueries.py  SearchBySummaries.py  SearchService.py
Application/Services/VectorStorage/: VectorStorageService.py
Data/Input/MD/: Regulamin.md
Data/Input/Raw/: PKO_MOTO.json  Regulacje_dla_klientow_indywidulanych.json  Regulamin_zawierania_umow_ubezpieczenia.json  Ustawa_o_ubezp_obowiazkowych.json
Data/Input/TXT/: Regulamin.txt
Data/Output/: PKO_MOTO.json  Regulacje_dla_klientow_indywidulanych.json  Regulamin_zawierania_umow_ubezpieczenia.json  Ustawa_o_ubezp_obowiazkowych.json
Data/VectorDB/: meta.json
Data/VectorDB/collection/documents/: storage.sqlite
Data/VectorDB/collection/documents_keywords/: storage.sqlite
Data/VectorDB/collection/documents_queries/: storage.sqlite
Data/VectorDB/collection/documents_summaries/: storage.sqlite
Infrastructure/Services/: QdrantManagerService.py
pages/: 01_Wyszukiwarka.py  02_Quality_monitor.py
